cpp/robot-name/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.008s
user	0m0.001s
sys	0m0.007s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'
[ 25%] Building CXX object CMakeFiles/robot-name.dir/robot_name_test.cpp.o
[ 50%] Building CXX object CMakeFiles/robot-name.dir/robot_name.cpp.o
[ 75%] Building CXX object CMakeFiles/robot-name.dir/test/tests-main.cpp.o
[100%] Linking CXX executable robot-name
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'
[100%] Built target robot-name
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'
===============================================================================
All tests passed (20004 assertions in 5 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'
[100%] Built target test_robot-name
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/robot-name.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/robot-name.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)31166"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
robot_name.cpp                                20      20   100%   
robot_name_test.cpp                           34      33    97%   19
test/catch.hpp                                47      40    85%   1642-1643,2227,2229,2301-2302,2560
------------------------------------------------------------------------------
TOTAL                                        101      93    92%
------------------------------------------------------------------------------
lines: 92.1% (93 out of 101)
branches: 42.3% (71 out of 168)

real	0m11.960s
user	0m11.024s
sys	0m0.926s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.189s
user	0m0.127s
sys	0m0.064s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.161s
user	0m0.115s
sys	0m0.048s

===============================================================================

Running: clang-format-16 -style=file -i ./robot_name.cpp ./robot_name_test.cpp ./robot_name.h

real	0m0.020s
user	0m0.006s
sys	0m0.014s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./robot_name.cpp ./robot_name_test.cpp ./robot_name.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/robot_name.h:4:10: fatal error: 'algorithm' file not found
#include <algorithm>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/robot_name.h.

real	0m1.551s
user	0m1.483s
sys	0m0.068s


real	0m1.553s
user	0m1.485s
sys	0m0.068s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
22814 warnings generated.
60051 warnings generated.
60051 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/robot_name.h.
Suppressed 60050 warnings (60044 in non-user code, 6 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m10.280s
user	0m10.157s
sys	0m0.121s
Running: clang-tidy-16 ./robot_name.cpp ./robot_name_test.cpp ./robot_name.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/robot_name.h:4:10: error: 'algorithm' file not found [clang-diagnostic-error]
#include <algorithm>
         ^~~~~~~~~~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/robot_name_test.cpp:17:13: warning: 'validate_name' is a static definition in anonymous namespace; static is redundant here [readability-static-definition-in-anonymous-namespace]
static bool validate_name(const string &name) {
~~~~~~~     ^
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/robot_name_test.cpp:18:28: warning: statement should be inside braces [readability-braces-around-statements]
    if (name.length() != 5)
                           ^
                            {
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/robot_name_test.cpp:20:12: warning: implicit conversion 'int' -> bool [readability-implicit-bool-conversion]
    return isupper(name[0]) && isupper(name[1]) && isdigit(name[2]) &&
           ^
           (                != 0)
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/robot_name_test.cpp:20:32: warning: implicit conversion 'int' -> bool [readability-implicit-bool-conversion]
    return isupper(name[0]) && isupper(name[1]) && isdigit(name[2]) &&
                               ^
                               (                != 0)
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/robot_name_test.cpp:20:52: warning: implicit conversion 'int' -> bool [readability-implicit-bool-conversion]
    return isupper(name[0]) && isupper(name[1]) && isdigit(name[2]) &&
                                                   ^
                                                   (                != 0)
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/robot_name_test.cpp:21:12: warning: implicit conversion 'int' -> bool [readability-implicit-bool-conversion]
           isdigit(name[3]) && isdigit(name[4]);
           ^
           (                != 0)
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-name/robot_name_test.cpp:21:32: warning: implicit conversion 'int' -> bool [readability-implicit-bool-conversion]
           isdigit(name[3]) && isdigit(name[4]);
                               ^
                               (                != 0)


real	0m10.282s
user	0m10.158s
sys	0m0.124s

===============================================================================

